--- a/alimentos.html
+++ b/alimentos.html
@@ -95,10 +95,10 @@ const base = {
     "🍚 Arroz","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"
   ],
   Extra: [
-    "Brigadeiro","Pasta de Amendoim","Chocolate",
+    "🍫 Brigadeiro","🥜 Pasta de Amendoim","🍫 Chocolate"
   ],
    Consegue com Facilidade: [
-    "Legumes","Frutas","Legumes","Suplemento"
+    "🥬 Legumes","🍎 Frutas","💊 Suplemento"
 };
 
 const dieta = {
