--- a/alimentos.html
+++ b/alimentos.html
@@ -1,320 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Escolha seus alimentos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/estilo.css">
-  <style>
-    /* CENTRALIZAR TÍTULO, SUBTÍTULO E ÍCONE SOBREPOSTO */
-    .titulo-central-wrapper {
-      position: relative;
-      text-align: center;
-      margin-bottom: 32px;
-    }
+<meta charset="UTF-8">
+<title>Escolha seus alimentos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/estilo.css">
+<style>
+  * { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Arial, sans-serif; }
+  body { background:#fff; min-height:100vh; }
 
-    .icone-dieta {
-      font-size: 120px;
-      color: var(--verde-logo);
-      opacity: 0.08;
-      position: absolute;
-      top: -20px;
-      left: 50%;
-      transform: translateX(-50%);
-      pointer-events: none;
-      z-index: 0;
-    }
+  :root { --verde-logo: #1db954; }
 
-    .titulo-central {
-      position: relative;
-      font-size: 28px;
-      font-weight: 800;
-      margin-bottom: 4px;
-      z-index: 1;
-    }
+  .container { max-width:420px; margin:0 auto; padding:60px 20px 120px; text-align:center; position:relative; }
 
-    .subtitulo-central {
-      position: relative;
-      font-size: 16px;
-      color: #444;
-      margin-bottom: 24px;
-      z-index: 1;
-    }
+  /* TÍTULO, SUBTÍTULO E ÍCONE */
+  .titulo-central-wrapper { position:relative; text-align:center; margin-bottom:32px; }
+  .icone-dieta { font-size:120px; color:var(--verde-logo); opacity:0.15; position:absolute; top:-20px; left:50%; transform:translateX(-50%); pointer-events:none; z-index:0; }
+  .titulo-central { position:relative; font-size:28px; font-weight:800; margin-bottom:4px; z-index:1; }
+  .subtitulo-central { position:relative; font-size:16px; color:#444; margin-bottom:24px; z-index:1; }
 
-    /* GRID DE CARDS DE ALIMENTOS */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
-      margin-bottom: 20px;
-    }
+  /* BARRA DE PROGRESSO */
+  .progresso { width:100%; height:6px; background:#eaeaea; border-radius:6px; position:fixed; top:0; left:0; z-index:20; }
+  .progresso-barra { height:100%; width:0%; background:var(--verde-logo); border-radius:6px; transition: width 0.4s ease; }
 
-    /* CARD INDIVIDUAL */
-    .card {
-      background-color: #ffffff;
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 12px 8px;
-      font-size: 14px;
-      text-align: center;
-      cursor: pointer;
-      user-select: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      transition: all 0.2s ease;
-    }
+  /* GRID DE CARDS */
+  .grid { display:grid; grid-template-columns:repeat(3,1fr); gap:8px; margin-bottom:20px; }
+  .card { background:#fff; border:1px solid #ddd; border-radius:10px; padding:8px 6px; font-size:12px; text-align:center; cursor:pointer; user-select:none; box-shadow:0 3px 8px rgba(0,0,0,0.08); transition:all 0.2s ease; }
+  .card:hover { transform:translateY(-1px); box-shadow:0 5px 14px rgba(0,0,0,0.12); border-color:var(--verde-logo); }
+  .card.ativo { background:var(--verde-logo); color:#fff; border-color:var(--verde-logo); }
 
-    .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-      border-color: var(--verde-logo);
-    }
+  /* TÍTULOS DAS REFEIÇÕES */
+  .titulo-refeicao { text-align:center; margin-bottom:10px; font-size:16px; font-weight:600; }
 
-    .card.ativo {
-      background-color: var(--verde-logo);
-      color: #fff;
-      border-color: var(--verde-logo);
-    }
-
-    .titulo-refeicao {
-      text-align: center;
-      margin-bottom: 12px;
-      font-size: 18px;
-      font-weight: 600;
-    }
-
-    /* MELHORAR BOTÃO ADICIONAR ALIMENTO */
-    .add-box {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 24px;
-      gap: 8px;
-    }
-
-    .add-box input {
-      padding: 8px 12px;
-      font-size: 14px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      outline: none;
-      flex: 1;
-      text-align: center;
-    }
-
-    .add-box button {
-      background-color: var(--verde-logo);
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: 8px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-
-    .add-box button:hover {
-      opacity: 0.85;
-      transform: scale(1.05);
-    }
-
-    /* BOTÃO "VER MINHA DIETA AGORA" ESTILO PÁGINA ANTERIOR */
-    .btn-ver-dieta {
-      display: block;
-      width: 100%;
-      max-width: 320px;
-      margin: 24px auto;
-      padding: 14px;
-      background-color: var(--verde-logo);
-      color: #fff;
-      font-size: 17px;
-      font-weight: 700;
-      text-align: center;
-      border-radius: 40px;
-      box-shadow: 0 12px 30px rgba(29, 185, 84, 0.4);
-      text-decoration: none;
-      transition: 0.2s;
-      cursor: pointer;
-    }
-
-    .btn-ver-dieta:hover {
-      transform: scale(1.03);
-      opacity: 0.9;
-    }
-
-    /* BARRA DE PROGRESSO */
-    .progresso-alimentos {
-      width: 100%;
-      height: 6px;
-      background: #eaeaea;
-      border-radius: 6px;
-      margin-bottom: 24px;
-    }
-
-    .progresso-barra-alimentos {
-      height: 100%;
-      width: 0%;
-      background: var(--verde-logo);
-      border-radius: 6px;
-      transition: width 0.3s ease;
-    }
-  </style>
-</head>
-<body>
-
-<div class="container">
-  <!-- Regra / linha com símbolo de dieta -->
-<div class="linha-simbolo-wrapper">
-  <span class="linha"></span>
-  <span class="simbolo-dieta">🥗</span>
-  <span class="linha"></span>
-</div>
-
-<h1 class="titulo-central">Monte sua dieta</h1>
-<p class="subtitulo-central">Selecione os alimentos que deseja ter na sua dieta</p>
-
-  <!-- BARRA DE PROGRESSO -->
-  <div class="progresso">
-    <div class="progresso-barra" id="barraProgresso"></div>
-</div>
-  </div>
-
-  <!-- CAFÉ DA MANHÃ -->
-  <section>
-    <h2 class="titulo-refeicao">Café da manhã</h2>
-    <div class="grid" id="cafeManha"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'cafeManha')">+</button>
-    </div>
-  </section>
-
-  <!-- ALMOÇO -->
-  <section>
-    <h2 class="titulo-refeicao">Almoço</h2>
-    <div class="grid" id="almoco"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'almoco')">+</button>
-    </div>
-  </section>
-
-  <!-- CAFÉ DA TARDE -->
-  <section>
-    <h2 class="titulo-refeicao">Café da tarde</h2>
-    <div class="grid" id="cafeTarde"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'cafeTarde')">+</button>
-    </div>
-  </section>
-
-  <!-- JANTA -->
-  <section>
-    <h2 class="titulo-refeicao">Janta</h2>
-    <div class="grid" id="janta"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'janta')">+</button>
-    </div>
-  </section>
-
-  <!-- Extra / Acompanhamento -->
-  <section>
-    <h2 class="titulo-refeicao">Extra</h2>
-    <div class="grid" id="extra"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'extra')">+</button>
-    </div>
-  </section>
-
-  <!-- Consegue com facilidade -->
-  <section>
-    <h2 class="titulo-refeicao">Facilidade</h2>
-    <div class="grid" id="facilidade"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'facilidade')">+</button>
-    </div>
-  </section>
-
-  <!-- BOTÃO VER MINHA DIETA AGORA -->
-  <button class="btn-ver-dieta" onclick="finalizar()">Ver minha dieta agora</button>
-</div>
-
-<script>
-const base = {
-  cafeManha: ["🥚 Ovos","🍞 Pão integral","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Aveia","🍌 Banana","🍎 Frutas","🥛 Leite","🥤 Whey"],
-  almoco: ["🍚 Arroz","🫘 Feijão","🍗 Frango","🥩 Carne","🐟 Peixe","🥔 Batata","🍝 Macarrão","🥗 Salada","🥕 Legumes","🍳 Ovos"],
-  cafeTarde: ["🍞 Pão","🥚 Ovo","🍗 Frango","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Iogurte","🥤 Whey","🥜 Castanhas","🍎 Frutas"],
-  janta: ["🍗 Frango","🥩 Carne magra","🐟 Peixe","🍳 Ovos","🍠 Batata doce","🍚 Arroz","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"],
-  extra: ["🍫 Brigadeiro","🥄 Doce de leite","🥜 Pasta de amendoim"],
-  facilidade: ["🥬 Verduras","🍎 Frutas","💊 Suplementos"]
-};
-
-const dieta = {
-  cafeManha: [],
-  almoco: [],
-  cafeTarde: [],
-  janta: [],
-  extra: [],
-  facilidade: []
-};
-
-// Montar cards
-Object.keys(base).forEach(ref => {
-  const box = document.getElementById(ref);
-  base[ref].forEach(nome => {
-    const c = document.createElement("div");
-    c.className = "card";
-    c.innerText = nome;
-    c.onclick = () => toggle(ref, nome, c);
-    box.appendChild(c);
-  });
-});
-
-function toggle(ref, nome, el){
-  const idx = dieta[ref].findIndex(i => i.nome === nome);
-  if(idx >= 0){
-    dieta[ref].splice(idx,1);
-    el.classList.remove("ativo");
-  } else {
-    dieta[ref].push({nome, macros:{proteina:25,carbo:30,gordura:10}});
-    el.classList.add("ativo");
-  }
-  atualizarProgresso();
-}
-
-function adicionar(btn, ref){
-  const input = btn.previousElementSibling;
-  if(!input.value.trim()) return;
-  const nome = "🍽️ " + input.value;
-  const card = document.createElement("div");
-  card.className = "card ativo";
-  card.innerText = nome;
-  card.onclick = () => toggle(ref, nome, card);
-  document.getElementById(ref).appendChild(card);
-  dieta[ref].push({nome, macros:{proteina:20,carbo:30,gordura:10}});
-  input.value = "";
-  atualizarProgresso();
-}
-
-function finalizar(){
-  localStorage.setItem("dietaSelecionada", JSON.stringify(dieta));
-  location.href = "resultado.html";
-}
-
-// FUNÇÃO PARA ATUALIZAR BARRA DE PROGRESSO
-function atualizarProgresso(){
-  let totalCards = 0;
-  let selecionados = 0;
-  Object.keys(dieta).forEach(ref => {
-    totalCards += document.getElementById(ref).children.length;
-    selecionados += dieta[ref].length;
-  });
-  const perc = totalCards ? (selecionados/totalCards)*100 : 0;
-  document.querySelector('.progresso-barra-alimentos').style.width = perc+'%';
-}
-</script>
-
-</body>
-</html>
+  /* BOTÃO ADICIONAR ALIMENTO */
+  .add-box { display:flex; justify-content:center; margin-bottom:24px; gap:6px; }
+  .add-box input { padding:6px 10px; font-size:13px; border-radius:8px; border:1px solid #ccc; outline:
