--- a/alimentos.html
+++ b/alimentos.html
@@ -52,17 +52,11 @@
 
 <div class="container">
   <!-- LINHA E SÍMBOLO -->
-  <div class="linha-simbolo-wrapper">
-    <span class="linha"></span>
-    <span class="simbolo-dieta">🥗</span>
-    <span class="linha"></span>
-  </div>
-
   <div class="titulo-central-wrapper">
-    <span class="icone-dieta">🥗</span>
-    <h1 class="titulo-central">Monte sua dieta</h1>
-    <p class="subtitulo-central">Selecione os alimentos que deseja ter na sua dieta</p>
-  </div>
+  <div class="icone-dieta-topo">🥗</div>
+  <h1 class="titulo-central">Monte sua dieta</h1>
+  <p class="subtitulo-central">Selecione os alimentos que deseja ter na sua dieta</p>
+</div>
 
   <!-- BARRA DE PROGRESSO -->
   <div class="progresso">
