--- a/alimentos.html
+++ b/alimentos.html
@@ -64,19 +64,24 @@
   </div>
 
   <!-- CAFÉ DA MANHÃ -->
-  <section>
-    <h2 class="titulo-refeicao">Café da manhã</h2>
-    <div class="grid" id="cafeManha"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
-      <button onclick="adicionar(this,'cafeManha')">+</button>
-    </div>
-  </section>
+  <section class="bloco-refeicao">
+  <h2 class="titulo-refeicao">Café da manhã</h2>
+
+  <div class="grid" id="cafeManha"></div>
+
+  <div class="add-box">
+    <input placeholder="Adicionar alimento">
+    <button onclick="adicionar(this,'cafeManha')">+</button>
+  </div>
+</section>
+
 
   <!-- ALMOÇO -->
-  <section>
+  <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Almoço</h2>
+   
     <div class="grid" id="almoco"></div>
+   
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'almoco')">+</button>
@@ -84,21 +89,24 @@
   </section>
 
   <!-- CAFÉ DA TARDE -->
-  <section>
+  <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Café da tarde</h2>
-    <div class="grid" id="cafeTarde"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
+   
+    <div class="grid" id="Café da tarde"></div>
+   
+   <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'cafeTarde')">+</button>
     </div>
   </section>
 
   <!-- JANTA -->
   <section>
+  <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Janta</h2>
-    <div class="grid" id="janta"></div>
-    <div class="add-box">
-      <input placeholder="Adicionar alimento">
+   
+    <div class="grid" id="Janta"></div>
+   
+   <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'janta')">+</button>
     </div>
   </section>
