--- a/alimentos.html
+++ b/alimentos.html
@@ -112,9 +112,10 @@
   </section>
 
   <!-- EXTRA -->
-  <section>
     <h2 class="titulo-refeicao">Extra</h2>
-    <div class="grid" id="extra"></div>
+   
+    <div class="grid" id="Extra"></div>
+   
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'extra')">+</button>
@@ -122,9 +123,10 @@
   </section>
 
   <!-- FACILIDADE -->
-  <section>
     <h2 class="titulo-refeicao">Facilidade</h2>
-    <div class="grid" id="facilidade"></div>
+   
+    <div class="grid" id="Facilidade"></div>
+   
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'facilidade')">+</button>
