--- a/alimentos.html
+++ b/alimentos.html
@@ -64,24 +64,19 @@
   </div>
 
   <!-- CAFÉ DA MANHÃ -->
-  <section class="bloco-refeicao">
-  <h2 class="titulo-refeicao">Café da manhã</h2>
-
-  <div class="grid" id="cafeManha"></div>
-
-  <div class="add-box">
-    <input placeholder="Adicionar alimento">
-    <button onclick="adicionar(this,'cafeManha')">+</button>
-  </div>
-</section>
-
+  <section>
+    <h2 class="titulo-refeicao">Café da manhã</h2>
+    <div class="grid" id="cafeManha"></div>
+    <div class="add-box">
+      <input placeholder="Adicionar alimento">
+      <button onclick="adicionar(this,'cafeManha')">+</button>
+    </div>
+  </section>
 
   <!-- ALMOÇO -->
-  <section class="bloco-refeicao">
+  <section>
     <h2 class="titulo-refeicao">Almoço</h2>
-   
     <div class="grid" id="almoco"></div>
-   
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'almoco')">+</button>
@@ -89,33 +84,29 @@
   </section>
 
   <!-- CAFÉ DA TARDE -->
-  <section class="bloco-refeicao">
+  <section>
     <h2 class="titulo-refeicao">Café da tarde</h2>
-   
-    <div class="grid" id="Café da tarde"></div>
-   
-   <input placeholder="Adicionar alimento">
+    <div class="grid" id="cafeTarde"></div>
+    <div class="add-box">
+      <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'cafeTarde')">+</button>
     </div>
   </section>
 
   <!-- JANTA -->
   <section>
-  <section class="bloco-refeicao">
     <h2 class="titulo-refeicao">Janta</h2>
-   
-    <div class="grid" id="Janta"></div>
-   
-   <input placeholder="Adicionar alimento">
+    <div class="grid" id="janta"></div>
+    <div class="add-box">
+      <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'janta')">+</button>
     </div>
   </section>
 
   <!-- EXTRA -->
+  <section>
     <h2 class="titulo-refeicao">Extra</h2>
-   
-    <div class="grid" id="Extra"></div>
-   
+    <div class="grid" id="extra"></div>
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'extra')">+</button>
@@ -123,10 +114,9 @@
   </section>
 
   <!-- FACILIDADE -->
+  <section>
     <h2 class="titulo-refeicao">Facilidade</h2>
-   
-    <div class="grid" id="Facilidade"></div>
-   
+    <div class="grid" id="facilidade"></div>
     <div class="add-box">
       <input placeholder="Adicionar alimento">
       <button onclick="adicionar(this,'facilidade')">+</button>
