--- a/alimentos.html
+++ b/alimentos.html
@@ -141,12 +141,12 @@
 
 <script>
 const base = {
-  cafeManha: ["🥚 Ovos","☕ Café s/ Açucar","🍞 Pão integral","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥚 Omelete","🥣 Aveia","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte"],
+  cafeManha: ["🥚 Ovos Cozidos","☕ Café s/ Açucar","🍞+🥚 Pão integral+Ovo","🧀+🥞 Tapioca+Queijo","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥚 Omelete","🥣+🍯 Aveia+Mel","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte"],
   almoco: ["🍚 Arroz","🌾 Feijão","🍗 Frango","🥩 Carne","🐟 Peixe","🥔 Batata Inglesa","🍝 Macarrão","🥗 Salada","🥕 Legumes","🍳 Ovos","🥚 Omelete","🥔 Batata Doce"],
   cafeTarde: ["🍞 Pão","☕ Café s/ Açucar","🥚 Ovo+Pão","🍗 Sanduiche+Frango","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Iogurte","🥤 Whey","🥜 Castanhas","🍎 Maça"],
   janta: ["🍗 Frango","🥩 Carne Corpo","🥩 Carne Bovina","🥩 Moela","🐟 Peixe","🍳 Ovos","🍠 Batata doce","🍚 Arroz","🥚 Omelete","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"],
   extra: ["🍫 Brigadeiro","🥄 Doce de leite","🥜 Pasta de amendoim"],
-  Facilidade: ["🥬 Verduras","🍎 Frutas","💊 Suplementos","🥕 Legumes"],
+  facilidade: ["🥬 Verduras","🍎 Frutas","💊 Suplementos","🥕 Legumes"],
 };
 
 const dieta = { cafeManha: [], almoco: [], cafeTarde: [], janta: [], extra: [], facilidade: [] };
