--- a/alimentos.html
+++ b/alimentos.html
@@ -141,7 +141,7 @@
 
 <script>
 const base = {
-  cafeManha: ["🥣+🍯 Aveia+Mel","☕+🧊 Café+Açucar","🥪+🥚 Sanduiche+Ovos","🥪+🧀 Sanduiche+Queijo","🥪+🍗 Sanduiche+Frango","🥞+🧀 Tapioca+Queijo","🥞+🍖 Tapioca+Presunto","🍨+🥣 Iogurte+Aveia","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥚 Omelete","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte","☕ Café"],
+  cafeManha: ["🥣+🍯 Aveia+Mel","☕+🧊 Café+Açucar","🥪+🥚 Sanduiche+Ovos","🥪+🧀 Sanduiche+Queijo","🥪+🍗 Sanduiche+Frango","🥞+🧀 Tapioca+Queijo","🥞+🍖 Tapioca+Presunto","🍨+🥣 Iogurte+Aveia","🥞+🥚 Tapioca+Ovos","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🍞 Pão ","🥚 Omelete","🍋 Suco de Limão ","🍊 Laranja ","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte","☕ Café"],
   almoco: ["🍚 Arroz","🌾 Feijão","🍗 Frango","🥩 Carne","🐟 Peixe","🥔 Batata Inglesa","🍝 Macarrão","🥗 Salada","🥕 Legumes","🍳 Ovos","🥚 Omelete","🥔 Batata Doce"],
   cafeTarde: ["🍞 Pão","☕ Café s/ Açucar","🥚 Ovo+Pão","🍗 Sanduiche+Frango","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Iogurte","🥤 Whey","🥜 Castanhas","🍎 Maça"],
   janta: ["🍗 Frango","🥩 Carne Corpo","🥩 Carne Bovina","🥩 Moela","🐟 Peixe","🍳 Ovos","🍠 Batata doce","🍚 Arroz","🥚 Omelete","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"],
