--- a/alimentos.html
+++ b/alimentos.html
@@ -141,11 +141,11 @@
 
 <script>
 const base = {
-  cafeManha: ["🥣+🍯 Aveia+Mel","☕+🧊 Café+Açucar","🥪+🥚 Sanduiche+Ovos","🥪+🧀 Sanduiche+Queijo","🥪+🍗 Sanduiche+Frango","🥞+🧀 Tapioca+Queijo","🥞+🍖 Tapioca+Presunto","🍨+🥣 Iogurte+Aveia","🥞+🥚 Tapioca+Ovos","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🍞 Pão ","🥚 Omelete","🍊 Laranja ","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte","☕ Café"],
-  almoco: ["🍚 Arroz","🌾 Feijão","🍗 Frango","🥩 Carne","🐟 Peixe","🥔 Batata Inglesa","🍝 Macarrão","🥗 Salada","🥕 Legumes","🍳 Ovos","🥚 Omelete","🥔 Batata Doce"],
-  cafeTarde: ["🍞 Pão","☕ Café s/ Açucar","🥚 Ovo+Pão","🍗 Sanduiche+Frango","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Iogurte","🥤 Whey","🥜 Castanhas","🍎 Maça"],
-  janta: ["🍗 Frango","🥩 Carne Corpo","🥩 Carne Bovina","🥩 Moela","🐟 Peixe","🍳 Ovos","🍠 Batata doce","🍚 Arroz","🥚 Omelete","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"],
-  extra: ["🍫 Brigadeiro","🥄 Doce de leite","🥜 Pasta de amendoim"],
+  cafeManha: ["🥣 Aveia","🥓 Bacon","🥖 Baguete","🍯 Mel","☕ Café+Açucar","🥚 Ovos","🍗 Frango","🍖 Presunto","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🍞 Pão ","🥚 Omelete","🍊 Laranja ","🍌 Banana","🍎 Maça","🥛 Leite","🥤 Whey","🍨 Iogurte","☕ Café","🥔 Batata Doce"],
+  almoco: ["🍚 Arroz","🍤 Camarão","🌾 Feijão","🍗 Frango","🥩 Carne Corpo","🥩 Carne Bovina","🥩 Moela","🐟 Peixe","🥔 Batata Inglesa","🍝 Macarrão","🥬 Folhas Verdes","🥕 Legumes","🥦 brocolis","🍳 Ovos","🥚 Omelete","🥔 Batata Doce","🐟 Atum","Suco de Laranja],
+  cafeTarde: ["🍞 Pão","🥖 Baguete","🥑 Abacate","☕ Café+Açucar","🥚 Ovos","🍗Frango","🥞 Tapioca","🌽 Cuscuz","🧀 Queijo","🥣 Iogurte","🥤 Whey","🥜 Castanhas","🍎 Maça","🥭 Manga","🍉 Melancia"],
+  janta: ["🍗 Frango","🍚 Arroz","🌾 Feijão","🥩 Carne Corpo","🥩 Carne Bovina","🥩 Moela","🐟 Peixe","🍳 Ovos","🍠 Batata doce","🍚 Arroz","🥚 Omelete","🥗 Salada","🥕 Legumes","🍝 Macarrão","🐟 Atum"],
+  extra: ["🍫 Brigadeiro","🥄 Doce de leite","🥜 Pasta de amendoim","🍮Gelatina","🍧 Sorvete","🥟 Biscoito"],
   facilidade: ["🥬 Verduras","🍎 Frutas","💊 Suplementos","🥕 Legumes"],
 };
 
