--- a/carregando.html
+++ b/carregando.html
@@ -12,6 +12,47 @@
   <div class="barra-container">
     <div class="barra-progresso" id="barraProgresso"></div>
   </div>
+  <script>
+  // ====== COLETA DE DADOS ======
+  const dadosUsuario = JSON.parse(localStorage.getItem("dadosUsuario")) || {};
+  const objetivoUsuario = localStorage.getItem("objetivoSelecionado") || "";
+  const dietaSelecionada = JSON.parse(localStorage.getItem("dietaSelecionada")) || {};
+
+  // ====== NOME NO RESUMO ======
+  const nomeSpan = document.getElementById("nomeUsuario");
+  if (nomeSpan && dadosUsuario.nome) {
+    nomeSpan.innerText = dadosUsuario.nome;
+  }
+
+  // ====== DADOS PESSOAIS ======
+  const dadosDiv = document.getElementById("dadosResumo");
+  if (dadosDiv) {
+    dadosDiv.innerHTML = `
+      <p><strong>Idade:</strong> ${dadosUsuario.idade || "-"} anos</p>
+      <p><strong>Peso:</strong> ${dadosUsuario.peso || "-"} kg</p>
+      <p><strong>Altura:</strong> ${dadosUsuario.altura || "-"} cm</p>
+    `;
+  }
+
+  // ====== ALIMENTOS SELECIONADOS ======
+  const alimentosDiv = document.getElementById("alimentosResumo");
+  if (alimentosDiv) {
+    let html = "";
+
+    Object.keys(dietaSelecionada).forEach(refeicao => {
+      if (dietaSelecionada[refeicao].length > 0) {
+        html += `<p><strong>${refeicao}:</strong></p><ul>`;
+        dietaSelecionada[refeicao].forEach(item => {
+          html += `<li>${item.nome}</li>`;
+        });
+        html += `</ul>`;
+      }
+    });
+
+    alimentosDiv.innerHTML = html || "<p>Nenhum alimento selecionado.</p>";
+  }
+</script>
+
 
   <!-- LOADING CENTRAL -->
   <div class="loading-container" id="loading">
