--- a/carregando.html
+++ b/carregando.html
@@ -69,24 +69,24 @@
 
       <h2>Resumo da sua dieta</h2>
 
-      <p><strong>Dados:</strong></p>
-      <p id="dadosUsuario"></p>
+      <p>Olá, <strong><span id="nomeUsuario"></span></strong> 👋</p>
 
-      <p class="objetivo">
-        <strong>Objetivo:</strong>
-        <span id="objetivoUsuario"></span>
-      </p>
+      <h3>Dados:</h3>
+<div id="dadosResumo"></div>
 
-      <p><strong>Alimentos selecionados:</strong></p>
-      <ul id="listaAlimentos"></ul>
+<h3>Alimentos selecionados:</h3>
+<div id="alimentosResumo"></div>
 
-      <button class="btn-principal" onclick="irParaPlanos()">
-        Gerar Dieta
-      </button>
+</div> <!-- FIM DO CARD DE RESUMO -->
 
-    </div>
-  </div>
+<button class="btn-principal" onclick="irParaPlanos()">
+  Gerar Dieta
+</button>
 
-  <script src="carregando.js"></script>
+</div>
+</div>
+
+<script src="carregando.js"></script>
 </body>
 </html>
+
