--- a/alimentos.html
+++ b/alimentos.html
@@ -184,7 +184,7 @@ function adicionar(btn,ref){
 
 function finalizar(){ 
   localStorage.setItem("dietaSelecionada",JSON.stringify(dieta));
-  location.href="resultado.html";
+  window.location.href = "carregando.html";
 }
 
 // BARRA DE PROGRESSO POR ETAPA (PÁGINA)
