--- a/dados.html
+++ b/dados.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -19,29 +19,47 @@
     Informe suas medidas aqui embaixo corretamente para darmos início
   </p>
 </div>
-<input type="text" id="nome" placeholder="Digite seu nome">
 
-<input type="number" id="idade" placeholder="Ex: 25">
+<div class="form-wrapper">
+  <div class="campo-whatsapp">
+    <label>Nome</label>
+    <input type="text" placeholder="Digite seu nome">
+  </div>
 
-<input type="number" id="peso" placeholder="Ex: 70">
+  <div class="campo-whatsapp">
+    <label>Idade</label>
+    <input type="number" placeholder="Ex: 25">
+  </div>
 
-<input type="number" id="altura" placeholder="Ex: 175">
+  <div class="campo-whatsapp">
+    <label>Peso (kg)</label>
+    <input type="number" placeholder="Ex: 70">
+  </div>
 
-<select id="sexo">
-  <option value="">Selecione</option>
-  <option>Masculino</option>
-  <option>Feminino</option>
-</select>
+  <div class="campo-whatsapp">
+    <label>Altura (cm)</label>
+    <input type="number" placeholder="Ex: 175">
+  </div>
 
-<select id="objetivo">
-  <option value="">Selecione</option>
-  <option>Emagrecimento</option>
-  <option>Hipertrofia</option>
-  <option>Emagrecimento+Hipertrofia</option>
-  <option>Ganhar massa</option>
-  <option>Ganhar massa+Hipertrofia</option>
-</select>
+  <div class="campo-whatsapp">
+    <label>Sexo</label>
+    <select>
+      <option>Selecione</option>
+      <option>Masculino</option>
+      <option>Feminino</option>
+    </select>
+  </div>
 
+  <div class="campo-whatsapp">
+      <label>Objetivo</label>
+      <select>
+        <option value="">Selecione</option>
+        <option>Emagrecimento</option>
+        <option>Hipertrofia</option>
+        <option>Emagrecimento+Hiertofria</option>
+        <option>Ganhar massa</option>
+        <option>Ganhar massa+Hipertrofia</option>
+      </select>
     </div>
 
   </div>
