--- a/dados.html
+++ b/dados.html
@@ -19,8 +19,11 @@
     Informe suas medidas aqui embaixo corretamente para darmos início
   </p>
 </div>
-
+ 
+<div class="card-dados">
+ 
 <div class="form-wrapper">
+ 
   <div class="campo-whatsapp">
     <label>Nome</label>
     <input type="text" placeholder="Digite seu nome">
@@ -56,9 +59,11 @@
         <option value="">Selecione</option>
         <option>Emagrecimento</option>
         <option>Hipertrofia</option>
-        <option>Emagrecimento+Hiertofria</option>
         <option>Ganhar massa</option>
-        <option>Ganhar massa+Hipertrofia</option>
+        <option>Emagrecimento + Hipertofria</option>
+        <option>Ganhar massa + Hipertrofia</option>
+        <option>Qualidade de Vida</option>
+        <option>Saúde</option>
       </select>
     </div>
 
