--- a/planos.html
+++ b/planos.html
@@ -27,12 +27,12 @@
       <p class="mensal">Planejamento mensal</p>
 
       <ul>
-        <li>⭐ Cronograma mensal completo</li>
-        <li>⭐ Gramatura dos alimentos</li>
-        <li>⭐ Horários adaptados</li>
-        <li>⭐ Suporte 24h via WhatsApp</li>
-        <li>⭐ Gera PDF</li>
-        <li>⭐ Acompanhamento via Aplicativo (Celular)</li>
+        <li>Cronograma mensal completo</li>
+        <li>Gramatura dos alimentos</li>
+        <li>Horários adaptados</li>
+        <li>Suporte 24h via WhatsApp</li>
+        <li>Gera PDF</li>
+        <li>Acompanhamento via Aplicativo Nutri+</li>
       </ul>
 
       <button class="botao-principal flutuante"
@@ -51,13 +51,13 @@
       <p class="mensal">Planejamento mensal</p>
 
       <ul>
-        <li>⭐ Dieta + Treino</li>
-        <li>⭐ Gramatura + Cronograma</li>
-        <li>⭐ Treino personalizado</li>
-        <li>⭐ Suporte semanal 5h/dia</li>
-        <li>⭐ Ideias de receitas</li>
-        <li>⭐ Gera PDF</li>
-        <li>⭐ Acompanhamento via Aplicativo (Celular)</li>
+        <li>Dieta + Treino</li>
+        <li>Gramatura + Cronograma</li>
+        <li>Treino personalizado</li>
+        <li>Suporte semanal 5h/dia</li>
+        <li>Ideias de receitas</li>
+        <li>Gera PDF</li>
+        <li>Acompanhamento via Aplicativo Nutri+</li>
       </ul>
 
       <button class="botao-principal flutuante"
@@ -76,14 +76,14 @@
       <p class="mensal">Planejamento mensal</p>
 
       <ul>
-        <li>⭐ Treino personalizado</li>
-        <li>⭐ 1x Consulta com Personal</li>
-        <li>⭐ 1x Ajuste de treino</li>
-        <li>⭐ Suporte quinzenal 8h/dia</li>
-        <li>⭐ Ideias de receitas</li>
-        <li>⭐ Dieta Digital</li>
-        <li>⭐ Gera PDF</li>
-        <li>⭐ Acompanhamento via Aplicativo (Celular)</li>
+        <li>Treino personalizado</li>
+        <li>1x Consulta com Personal</li>
+        <li>1x Ajuste de treino</li>
+        <li>Suporte quinzenal 8h/dia</li>
+        <li>Ideias de receitas</li>
+        <li>Dieta Digital</li>
+        <li>Gera PDF</li>
+        <li>Acompanhamento via Aplicativo Nutri+</li>
       </ul>
 
       <button class="botao-principal flutuante"
@@ -102,12 +102,12 @@
       <p class="mensal">Planejamento mensal</p>
 
       <ul>
-        <li>⭐ 1x Consulta com Nutricionista</li>
-        <li>⭐ 1x Ajuste de dieta especializado</li>
-        <li>⭐ Suporte mensal 10h/dia</li>
-        <li>⭐ WhatsApp + Email</li>
-        <li>⭐ Ideias de receitas</li>
-        <li>⭐ Cronograma de Treino</li>
+        <li>1x Consulta com Nutricionista</li>
+        <li>1x Ajuste de dieta especializado</li>
+        <li>Suporte mensal 10h/dia</li>
+        <li>WhatsApp + Email</li>
+        <li>Ideias de receitas</li>
+        <li>Cronograma de Treino</li>
       </ul>
 
       <button class="botao-principal flutuante"
@@ -126,11 +126,11 @@
       <p class="mensal">Planejamento mensal</p>
 
       <ul>
-        <li>⭐ Consulta 1x Nutricionista + Personal</li>
-        <li>⭐ Ajuste de dieta e treino</li>
-        <li>⭐ Suporte 12h/dia</li>
-        <li>⭐ WhatsApp + Email</li>
-        <li>⭐ Acompanhamento via Aplicativo (Celular)</li>
+        <li>Consulta 1x Nutricionista + Personal</li>
+        <li>Ajuste de dieta e treino</li>
+        <li>Suporte 12h/dia</li>
+        <li>WhatsApp + Email</li>
+        <li>Acompanhamento via Aplicativo (Celular)</li>
       </ul>
 
       <button class="botao-principal flutuante"
